@@ -33,7 +33,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import jdk.tools.jlink.plugin.Plugin;
 
@@ -51,7 +50,7 @@ public class Utils {
         return Arrays.stream(arguments.split(","))
                      .map((p) -> p.trim())
                      .filter((p) -> !p.isEmpty())
-                     .collect(Collectors.toList());
+                     .toList();
     }
 
 
